--- a/LogReg/login.html
+++ b/LogReg/login.html
@@ -13,7 +13,7 @@
             <input type="password" placeholder="Password" required>
             <button type="submit">Login</button>
             
-            <p>Don't have an account? <br><a href="reg.html">Register here</a></p>
+            <p>Don't have an account? <br><a href="register.html">Register here</a></p>
         </form>
     </div>
 </body>
