--- a/LogReg/register.html
+++ b/LogReg/register.html
@@ -14,7 +14,7 @@
             <input type="password" placeholder="Password" required>
             <input type="password" placeholder="Confirm Password" required>
             <button type="submit">Create Account</button>
-            <p>Already have an account? <br><a href="log.html">Login here</a></p>
+            <p>Already have an account? <br><a href="login.html">Login here</a></p>
         </form>
         </div>
     </div>
